--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html lang="en" class=" theme-black">
   <head>
+    <meta name="referrer" content="no-referrer" />
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://cdn.glitch.com/9cf1a9cd-4223-4d68-8e9d-188892573aae%2Fgo-nh.png?1547725929082">
 	<%- title%>
 	<%- description%>
